<resources>
    <string name="app_name">Odtwarzacz - pilot</string>
    <string name="connect">Connect</string>
    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="wifi" translatable="false">Wifi</string>
    <string name="connected_with">Connected with %1$s</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="pilot">Pilot</string>
    <string name="playlist">Playlist</string>
    <string name="settings">Settings</string>
    <string name="preview">Preview</string>
    <string name="btn_showplaylist">Show playlist</string>
    <string name="btn_mute">Mute/unmute</string>
    <string name="btn_random">Random</string>
    <string name="btn_repeat">Repeat</string>
    <string name="btn_vol_up">Volume up</string>
    <string name="btn_volume_down">Volume down</string>
    <string name="btn_next">Next</string>
    <string name="btn_prev" >Previous</string>
    <string name="btn_play">Play/pause</string>
    <string name="btn_next_randomize">Randomize next file</string>
    <string name="img_background_circle" />
    <string name="internet" translatable="false">Internet</string>
    <string name="usb" translatable="false">USB</string>
    <string name="recent_connected">Recent connected</string>
    <string name="connecting">Connecting</string>
    <string name="founded">Founded devices</string>
    <string name="searching_devices">Searching devices</string>
    <string name="connecting_with">Connecting with %1$s</string>
    <string name="connecting_error">Can\'t connect to %1$s</string>

    <string-array name="country_arrays">
        <item>Malaysia</item>
        <item>United States</item>
        <item>Indonesia</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>


    <string name="player_nofilechoosen">No chosen file</string>
    <string name="recent_files">Recent files</string>
    <string name="open">Open</string>
    <string name="yes">Yes</string>
    <string name="playlist_already_exist">These files are already added to playlist</string>
    <string name="playlist_already_exist_add">Do you want to add selected files?</string>


    <string-array name="playlist_item_menu">
        <item>Play</item>
        <item>Properties</item>
        <item>Add to queue</item>
        <item>Remove from queue</item>
        <item>Disable/Enable</item>
        <item>Remove</item>
    </string-array>

    <string name="properties">Properties</string>
    <string name="prop_name">Name</string>
    <string name="prop_path">Path</string>
    <string name="prop_artist">Artist</string>
    <string name="prop_album">Album</string>
    <string name="prop_bitrate">Bit rate</string>
    <string name="prop_channels">Channels</string>
    <string name="prop_duration">Duration</string>
    <string name="prop_framerate">Frame rate</string>
    <string name="prop_height">Height</string>
    <string name="prop_samplingrate">Sampling rate</string>
    <string name="prop_width">Width</string>
    <string name="connecting_wifi_error">You are not connected to Wi-Fi network</string>
    <string name="menu_showqueue">Show queue</string>
    <string name="queue_clear">Clear queue</string>
    <string name="queue">Queue</string>
    <string name="close">Close</string>
    <string name="paired_devices">Paired devices</string>
    <string name="bt_settings">Bluetooth settings</string>
    <string name="refresh">Refresh</string>
    <string name="no_bluetooth_support">This device don\'t support Bluetooth</string>
    <string name="menu_showrecent">Show recent files</string>
</resources>
