<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:padding="22dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnWifi"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:text="@string/wifi"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnBt"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:text="@string/bluetooth"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>