<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/window_border"
        android:orientation="vertical"
        android:padding="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/search_cancel"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="48dp"
                android:layout_marginStart="6dp"
                android:layout_weight="0"
                android:text="@string/paired_devices"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>


        <ListView
            android:id="@+id/founded_devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_pair"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="3dp"
                android:text="@string/bt_settings" />

            <Button
                android:id="@+id/btn_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingLeft="3dp"
                android:text="@string/refresh" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>